--- a/index.html
+++ b/index.html
@@ -20,4 +20,13 @@
     </script>
     <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   </body>
+
+  <div data-app id="main">Please wait...</div>
+
+    <script>
+    window.$docsify = {
+        el: '#main',
+    };
+    </script>
 </html>
+
